# FIIT_TEAP_Zadania

./: .gitignore  1-2.c  2-1.c  2-2.c  3-1.c  3-2.c  4-1.c  4-2-multi.c  4-2-old.c  4-2.c  5-1.c  5-2.c  6-1.c  6-2.c  7-1.c  7-2.c  8-1.c  8-2.c  CMakeLists.txt  README.md
1-1/: CMakeLists.txt  main.c
1-2/: CMakeLists.txt
2-1/: CMakeLists.txt  main.c
2-2/: main.c
3-1/: CMakeLists.txt  main.c
3-2/: main.c
4-1/: CMakeLists.txt  main.c
4-2/: CMakeLists.txt  main.c
5-1/: CMakeLists.txt  main.c
5-2/: CMakeLists.txt  main.c
6-1/: CMakeLists.txt  main.c
6-2/: main.c
7-1/: CMakeLists.txt  main.c
7-2/: CMakeLists.txt  main.c
8-1/: CMakeLists.txt  main.c
8-2/: CMakeLists.txt  main.c
