cmake_minimum_required(VERSION 3.27)
project(TEAP_Zadania C)

set(CMAKE_C_STANDARD 11)

add_executable(1_1 1-1.c)
add_executable(1_2 1-2.c)
add_executable(2_1 2-1.c)
add_executable(2_2 2-2.c)
add_executable(3_1 3-1.c)
add_executable(3_2 3-2.c)
add_executable(4_1 4-1.c)
add_executable(4-2 4-2.c)
add_executable(4-2-multi 4-2-multi.c)
add_executable(5_1 5-1.c)
add_executable(5_2 5-2.c)
add_executable(6_1 6-1.c)
add_executable(6_2 6-2.c)
add_executable(7_1 7-1.c)
add_executable(7_2 7-2.c)
add_executable(8_1 8-1.c)
add_executable(8_2 8-2.c)

target_link_libraries(1_1 PRIVATE m)
target_link_libraries(1_2 PRIVATE m)
target_link_libraries(2_1 PRIVATE m)
target_link_libraries(2_2 PRIVATE m)
target_link_libraries(3_1 PRIVATE m)
target_link_libraries(3_2 PRIVATE m)
target_link_libraries(4_1 PRIVATE m)
target_link_libraries(4-2 PRIVATE m)
target_link_libraries(4-2-multi PRIVATE pthread m)
target_link_libraries(5_1 PRIVATE m)
target_link_libraries(5_2 PRIVATE m)
target_link_libraries(6_1 PRIVATE m)
target_link_libraries(6_2 PRIVATE m)
target_link_libraries(7_1 PRIVATE m)
target_link_libraries(7_2 PRIVATE m)
target_link_libraries(8_1 PRIVATE m)
target_link_libraries(8_2 PRIVATE m)
